QtQml: Correctly convert to QQmlListProperty<QObject>

If we have a QQmlListWrapper, we can extract its property.

Fixes: QTBUG-117829
Pick-to: 6.6 6.5 6.2
Change-Id: I46ae8db1aabf7c1b617a22f371ce4f060cf4bb38
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>